# arxiv-ingest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  config.yaml  config.yaml.example  main.py  pyproject.toml
.claude/commands/: arxiv-ingest.md
.github/workflows/: daily.yml  publish.yml  tests.yml
scripts/: fetch.py  generate.py  notify.py  summarize.py
tests/: test_bibtex.py  test_fetch.py  test_generate.py  test_init.py  test_list.py  test_notify.py  test_obsidian.py  test_open.py  test_quartz.py  test_version_and_json.py  test_wiki_index.py  test_wiki_templates.py
